--- a/scrum-poker-client/src/app/scrum-poker-page/scrum-poker-page.component.html
+++ b/scrum-poker-client/src/app/scrum-poker-page/scrum-poker-page.component.html
@@ -1,1 +1,2 @@
-<app-poker-table></app-poker-table>
+<app-poker-table class="mx-auto flex flex-col w-3/5 my-10"></app-poker-table>
+<app-deck class="mt-28 mx-auto max-w-full flex flex-row justify-center gap-4"></app-deck>
