--- a/scrum-poker-client/src/app/card/card.component.html
+++ b/scrum-poker-client/src/app/card/card.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col gap-2 w-20">
+<div class="flex flex-col gap-2 w-20" (click)="handleClick()">
   <div class="flex justify-center items-center w-full h-28 rounded-lg border border-blue-400">
     <p class="font-mono text-lg text-blue-600" >{{this.point}}</p>
   </div>
