--- a/scrum-poker-client/src/app/player-name-form/player-name-form.component.html
+++ b/scrum-poker-client/src/app/player-name-form/player-name-form.component.html
@@ -1,5 +1,5 @@
 <div class="w-1/3 bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
-  <form #playerNameForm="ngForm" class="w-auto">
+  <form #playerNameForm="ngForm" (ngSubmit)="handleSubmit()" class="w-auto">
     <div class="mb-4">
       <label for="playerName" class="block text-gray-700 text-sm font-bold mb-2">
         Player Name
