change card style according to status

--- a/scrum-poker-client/src/app/deck/deck.component.html
+++ b/scrum-poker-client/src/app/deck/deck.component.html
@@ -1,1 +1,1 @@
-<app-card *ngFor="let point of points" [point]="point" name=''/>
+<app-card *ngFor="let point of points" [isSet]="true" [isVisible]="true" [point]="point" name=''/>
