--- a/scrum-poker-client/src/app/card/card.component.html
+++ b/scrum-poker-client/src/app/card/card.component.html
@@ -1,5 +1,9 @@
-<div class="flex flex-col gap-2 w-20" (click)="handleClick()">
-  <div class="flex justify-center items-center w-full h-28 rounded-lg border border-blue-400">
+<div class="flex flex-col gap-2 w-20">
+  <div *ngIf="isSet === false" class="w-full h-28 rounded-lg border border-dotted border-blue-400"></div>
+
+  <div *ngIf="isSet === true && isVisible === false" class="w-full h-28 rounded-lg border bg-blue-200 border-blue-400"></div>
+  
+  <div *ngIf="isSet === true && isVisible === true" class="flex justify-center items-center w-full h-28 rounded-lg border border-blue-400">
     <p class="font-mono text-lg text-blue-600" >{{this.point}}</p>
   </div>
   <p class="text-center font-mono text-xs text-blue-600">{{this.name}}</p>
