--- a/scrum-poker-client/src/app/deck/deck.component.html
+++ b/scrum-poker-client/src/app/deck/deck.component.html
@@ -1,1 +1,3 @@
-<app-card *ngFor="let point of points" [isSet]="true" [isVisible]="true" [point]="point" name=''/>
+<div class="mx-auto max-w-full flex flex-row justify-center gap-4">
+  <app-card *ngFor="let point of points" [isSet]="true" [isVisible]="true" [point]="point" name=''/>
+</div>
