--- a/scrum-poker-client/src/app/scrum-poker-page/scrum-poker-page.component.html
+++ b/scrum-poker-client/src/app/scrum-poker-page/scrum-poker-page.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="myName;else playerNameForm">
-  <app-poker-table [myName]="myName" class="mx-auto flex flex-col w-3/5 my-10"></app-poker-table>
-  <app-deck class="mt-28 mx-auto max-w-full flex flex-row justify-center gap-4"></app-deck>
+  <app-poker-table [myName]="myName"></app-poker-table>
+  <app-deck class="mt-28"></app-deck>
 </div>
 
 <ng-template #playerNameForm>
