--- a/scrum-poker-client/src/app/scrum-poker-page/scrum-poker-page.component.html
+++ b/scrum-poker-client/src/app/scrum-poker-page/scrum-poker-page.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="myName;else playerNameForm">
   <app-poker-table [myName]="myName"></app-poker-table>
-  <app-deck class="mt-28"></app-deck>
+  <app-deck class="mt-28" (onClick)="onSelectCard($event)"></app-deck>
 </div>
 
 <ng-template #playerNameForm>
