--- a/scrum-poker-client/src/app/card/card.component.html
+++ b/scrum-poker-client/src/app/card/card.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col gap-2 w-20">
+<div class="flex flex-col gap-2 w-20" (click)="handleClick()">
   <div *ngIf="isSet === false" class="w-full h-28 rounded-lg border border-dotted border-blue-400"></div>
 
   <div *ngIf="isSet === true && isVisible === false" class="w-full h-28 rounded-lg border bg-blue-200 border-blue-400"></div>
