move deck component under poker-table component

--- a/scrum-poker-client/src/app/scrum-poker-page/scrum-poker-page.component.html
+++ b/scrum-poker-client/src/app/scrum-poker-page/scrum-poker-page.component.html
@@ -1,6 +1,5 @@
 <div *ngIf="myName;else playerNameForm">
-  <app-poker-table/>
-  <app-deck class="mt-28" (onClick)="onSelectCard($event)"></app-deck>
+  <app-poker-table [myName]="myName"/>
 </div>
 
 <ng-template #playerNameForm>
