--- a/scrum-poker-client/src/app/poker-table/poker-table.component.html
+++ b/scrum-poker-client/src/app/poker-table/poker-table.component.html
@@ -1,9 +1,10 @@
 <div class="mx-auto flex flex-col w-3/5 my-10">
   <div class="chair-area">
-    <app-card *ngFor="let card of upperCards" [point]="card.point" [name]="card.name" />
+    <app-card *ngFor="let card of upperCards" [point]="card.point" [name]="card.name" [isSet]="card.status !== 'NOTEXIST'" [isVisible]="card.status === 'VISIBLE'" />
   </div>
   <div class="w-full my-10 h-28 rounded-full border border-blue-400"></div>
   <div class="chair-area">
-    <app-card *ngFor="let card of lowerCards" [point]="card.point" [name]="card.name" />
+    <app-card *ngFor="let card of lowerCards" [point]="card.point" [name]="card.name" [isSet]="card.status !== 'NOTEXIST'" [isVisible]="card.status === 'VISIBLE'" />
   </div>
 </div>
+<app-deck class="mt-28" (onClick)="onSelectCard($event)"></app-deck>
