--- a/scrum-poker-client/src/app/poker-table/poker-table.component.html
+++ b/scrum-poker-client/src/app/poker-table/poker-table.component.html
@@ -1,10 +1,12 @@
 <div class="mx-auto flex flex-col w-3/5 my-10">
   <div class="chair-area">
-    <app-card *ngFor="let card of upperCards" [point]="card.point" [name]="card.name" [isSet]="card.status !== 'NOTEXIST'" [isVisible]="card.status === 'VISIBLE'" />
+    <app-card *ngFor="let card of upperCards()" [point]="card.point" [name]="card.name" [isSet]="card.status !== 'NOTEXIST'" [isVisible]="card.status === 'VISIBLE'" />
   </div>
-  <div class="w-full my-10 h-28 rounded-full border border-blue-400"></div>
+  <div class="flex justify-center items-center w-full my-10 h-28 rounded-full border border-blue-400">
+    <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" (click)="showDown()">Show Down!</button>
+  </div>
   <div class="chair-area">
-    <app-card *ngFor="let card of lowerCards" [point]="card.point" [name]="card.name" [isSet]="card.status !== 'NOTEXIST'" [isVisible]="card.status === 'VISIBLE'" />
+    <app-card *ngFor="let card of lowerCards()" [point]="card.point" [name]="card.name" [isSet]="card.status !== 'NOTEXIST'" [isVisible]="card.status === 'VISIBLE'" />
   </div>
 </div>
 <app-deck class="mt-28" (onClick)="onSelectCard($event)"></app-deck>
